--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,8 @@
-name: 'vmn-stamping'
-description: 'Everything you need for versioning'
+name: 'vmn-versioning'
+description: 'Production grade solution for automatic versioning with full support for semantic versioning (Semver). Agnostic to programming language.'
+branding:
+  icon: trending-up
+  color: green
 inputs:
   release-mode:
     type: choice
@@ -9,19 +12,13 @@ inputs:
       - minor
       - patch
     required: true
+    default: patch
   app-name:
-    description: "name"
+    description: "Name of the app to stamp"
     required: true
-
+outputs:
+  verstr:
+    description: 'The version after stamping'
 runs:
-  using: "composite"
-  steps:
-    - name: Install vmn
-      shell: bash
-      run: pip3 install vmn
-    - name: Prepare vmn env
-      shell: bash
-      run: vmn init || vmn init-app ${{inputs.app-name}} || exit 0
-    - name: Advance version
-      shell: bash
-      run: "vmn stamp -r ${{inputs.release-mode}} ${{inputs.app-name}}"
+  using: 'node18'
+  main: 'index.js'
