--- a/.vmn/vmn_stamp_action/conf.yml
+++ b/.vmn/vmn_stamp_action/conf.yml
@@ -5,4 +5,6 @@ conf:
   extra_info: false
   hide_zero_hotfix: true
   template: '[{major}][.{minor}][.{patch}][.{hotfix}][-{prerelease}][+{buildmetadata}]'
-  version_backends: {}
+  version_backends:
+    npm:
+      path: "package.json"
