--- a/package.json
+++ b/package.json
@@ -1,25 +1,1 @@
-{
-  "name": "vmn-versioning-action",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "pip install vmn"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/progovoy/vmn-stamp-action.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "",
-  "bugs": {
-    "url": "https://github.com/progovoy/vmn-stamp-action.git"
-  },
-  "homepage": "https://github.com/progovoy/vmn-stamp-action.git#readme",
-  "dependencies": {
-    "@actions/core": "^1.10.0",
-    "@actions/github": "^5.1.1"
-  }
-}
+{"author": "", "bugs": {"url": "https://github.com/progovoy/vmn-stamp-action.git"}, "dependencies": {"@actions/core": "^1.10.0", "@actions/github": "^5.1.1"}, "description": "", "homepage": "https://github.com/progovoy/vmn-stamp-action.git#readme", "keywords": [], "license": "", "main": "index.js", "name": "vmn-versioning-action", "repository": {"type": "git", "url": "git+https://github.com/progovoy/vmn-stamp-action.git"}, "scripts": {"postinstall": "pip install vmn", "test": "echo \"Error: no test specified\" && exit 1"}, "version": "0.6.1"}
