--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
-name: 'vmn-action'
-description: 'Production grade solution for automatic versioning with full support for semantic versioning (Semver)'
+name: 'vmn-versioning'
+description: 'Production grade solution for automatic tag based versioning with full support for semantic versioning (Semver)'
 branding:
   icon: trending-up
   color: green
