Change plugin description

--- a/action.yml
+++ b/action.yml
@@ -1,4 +1,4 @@
-name: 'auto-versioning'
+name: 'automatic-versioning'
 description: 'vmn based, production grade solution for versioning agnostic to language. Full support for semantic versioning (Semver).'
 branding:
   icon: trending-up
