--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "url": "git+https://github.com/progovoy/vmn-stamp-action.git"
     },
     "scripts": {
-        "postinstall": "python3 -m pip install vmn",
+        "postinstall": "python3 -m pip install --pre -U vmn",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "version": "0.6.22"
