--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
         "@vercel/ncc": "^0.34.0",
+        "@octokit/rest": "^19.0.7",
         "js-yaml": "^4.1.0",
         "node-git-current-branch": "^2.0.1"
     },
