--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "dependencies": {
         "@actions/core": "^1.10.0",
         "@actions/github": "^5.1.1",
-        "@vercel/ncc": "^0.34.0",
         "@octokit/rest": "^19.0.7",
+        "@vercel/ncc": "^0.34.0",
         "js-yaml": "^4.1.0",
+        "ncc": "^0.3.6",
         "node-git-current-branch": "^2.0.1"
     },
     "description": "",
